<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/Home"/>
    <item
        android:id="@+id/buscador"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/buscar"/>
    <item
        android:id="@+id/compartir"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/compartir"/>
    <item
        android:id="@+id/perfil"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/perfil"/>
    <item
        android:id="@+id/chat"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/chats"/>
</menu>